boom/measurements/verilator-mega-O3/compile-time-warmup-2.txt
START: Current timestamp in milliseconds: 1731323131116
GROUP: verilator SUBGROUP: firtool COMMAND: firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-2//boom.fir -o /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-2//boom.sv
/home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-2//boom.fir:1:16: error: FIRRTL version must be >=2.0.0
FIRRTL version 1.1.0
               ^

 Performance counter stats for '/usr/local/bin/firtool --lowering-options=disallowLocalVariables,mitigateVivadoArrayIndexConstPropBug /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-2//boom.fir -o /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-2//boom.sv':

             32.52 msec task-clock:u                     #    0.990 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             2,892      page-faults:u                    #   88.923 K/sec                     
        23,253,550      cycles:u                         #    0.715 GHz                         (17.05%)
         7,541,358      stalled-cycles-frontend:u        #   32.43% frontend cycles idle        (17.05%)
       199,807,980      instructions:u                   #    8.59  insn per cycle            
                                                  #    0.04  stalled cycles per insn     (25.06%)
        42,495,561      branches:u                       #    1.307 G/sec                       (34.32%)
           663,464      branch-misses:u                  #    1.56% of all branches             (43.51%)
        92,376,076      L1-dcache-loads:u                #    2.840 G/sec                       (46.09%)
         8,485,582      L1-dcache-load-misses:u          #    9.19% of all L1-dcache accesses   (46.09%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
         1,275,194      L1-icache-loads:u                #   39.210 M/sec                       (46.12%)
             9,850      L1-icache-load-misses:u          #    0.77% of all L1-icache accesses   (46.09%)
            48,277      dTLB-loads:u                     #    1.484 M/sec                       (46.08%)
            27,670      dTLB-load-misses:u               #   57.32% of all dTLB cache accesses  (46.08%)
               386      iTLB-loads:u                     #   11.869 K/sec                       (38.04%)
             1,346      iTLB-load-misses:u               #  348.70% of all iTLB cache accesses  (28.82%)
         1,067,733      L1-dcache-prefetches:u           #   32.831 M/sec                       (19.59%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.032866682 seconds time elapsed

       0.019655000 seconds user
       0.013099000 seconds sys


GROUP: verilator SUBGROUP: verilator
%Error: Cannot find file containing module: '/home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-2/boom.sv'
%Error: This may be because there's no search path specified with -I<dir>.
        ... Looked in:
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-2/boom.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-2/boom.sv.v
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-2/boom.sv.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-2/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-2/boom.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-2/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-2/boom.sv.v
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-2/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-2/boom.sv.sv
%Error: Exiting due to 2 error(s)

 Performance counter stats for '/usr/bin/verilator -O3 --noassert --x-assign fast --x-initial fast --threads 1 -sv -cc -Mdir /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-2//boom-vtor /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-2//boom.sv /home/bea/Research/paper-evals/arc-tests/boom/../verilator-stubs.sv -j 0 -DPRINTF_COND=0 -DASSERT_VERBOSE_COND=0 -DSTOP_COND=0 -Wno-WIDTH':

             60.65 msec task-clock:u                     #    1.510 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             4,242      page-faults:u                    #   69.945 K/sec                     
       148,245,580      cycles:u                         #    2.444 GHz                         (55.48%)
        20,223,273      stalled-cycles-frontend:u        #   13.64% frontend cycles idle        (49.31%)
       361,237,192      instructions:u                   #    2.44  insn per cycle            
                                                  #    0.06  stalled cycles per insn     (13.68%)
        45,909,218      branches:u                       #  756.985 M/sec                       (34.28%)
         1,770,710      branch-misses:u                  #    3.86% of all branches             (44.99%)
       103,264,942      L1-dcache-loads:u                #    1.703 G/sec                       (47.81%)
         2,227,978      L1-dcache-load-misses:u          #    2.16% of all L1-dcache accesses   (47.81%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
        28,618,535      L1-icache-loads:u                #  471.883 M/sec                       (47.82%)
           450,899      L1-icache-load-misses:u          #    1.58% of all L1-icache accesses   (47.82%)
           564,354      dTLB-loads:u                     #    9.305 M/sec                       (47.82%)
            22,484      dTLB-load-misses:u               #    3.98% of all dTLB cache accesses  (52.27%)
           436,286      iTLB-loads:u                     #    7.194 M/sec                       (66.82%)
            13,346      iTLB-load-misses:u               #    3.06% of all iTLB cache accesses  (61.89%)
           713,202      L1-dcache-prefetches:u           #   11.760 M/sec                       (56.94%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.040172226 seconds time elapsed

       0.030321000 seconds user
       0.030019000 seconds sys


GROUP: verilator SUBGROUP: clang
